# ASCIIExperiments

./: .clang-format  CMakeLists.txt
data/: output.txt
lib/EasyBMP/: EasyBMP.cpp
src/: main.cpp
